[package]
name = "bill-boards-bevy"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = {version = "=0.16.1", features = ["dynamic_linking"]}

[dependencies]
bevy = "=0.16.1"
bevy_embedded_assets = ">=0.13"
rand = "*"
leafwing-input-manager = ">=0.17"
bevy_fix_cursor_unlock_web = ">=0.1.2"
parry3d = ">=0.21.1"
parry2d = ">=0.21.1"
bitflags = "2.9.1"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
rustdocflags = ["-Clinker=rust-lld.exe"]
rustflags = [
    # "-Zshare-generics=n", # Off if dynamic linking
    "-Zthreads=0",
]
